z-index fix

--- a/frontend/assets/less/site.less
+++ b/frontend/assets/less/site.less
@@ -4329,7 +4329,7 @@ margin-top:0;}
 }
 
 .nav_outer {
-	z-index: 5;
+	z-index: 20;
 	position: relative;
 	margin: 0 auto;
 	max-width: 1500px;
